--- a/assets/build.gradle
+++ b/assets/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 26
-
+    buildToolsVersion "26.0.3"
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
