--- a/assets/build.gradle
+++ b/assets/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
@@ -43,7 +43,7 @@ publish {
     userOrg = 'wshunli'
     groupId = 'com.wshunli.android'
     artifactId = 'android-copy-assets'
-    publishVersion = '2.1.0'
+    publishVersion = '2.2.0'
     desc = 'Library for copying assets files and folders to the device'
     website = 'https://github.com/wshunli/android-copy-assets'
 }
